release: v0.48.0
